color swatches fix

--- a/index.html
+++ b/index.html
@@ -299,19 +299,19 @@
           <div class="row mbl">
             <div class="span2">
               <dl class="palette palette-turquoise">
-                <dt>#1abc9c</dt>
-                <dd>Turquoise</dd>
+                <dt>#45BBFF</dt>
+                <dd>Blue</dd>
               </dl>
               <dl class="palette palette-green-sea">
-                <dt>#16a085</dt>
-                <dd>Green sea</dd>
+                <dt>#0088CC</dt>
+                <dd>DARK BLUE</dd>
               </dl>
             </div>
 
             <div class="span2">
               <dl class="palette palette-emerald">
                 <dt>#2ecc71</dt>
-                <dd>Emerald</dd>
+                <dd>Green</dd>
               </dl>
               <dl class="palette palette-nephritis">
                 <dt>#27ae60</dt>
@@ -322,7 +322,7 @@
             <div class="span2">
               <dl class="palette palette-peter-river">
                 <dt>#3498db</dt>
-                <dd>Peter river</dd>
+                <dd>BOLD BLUE</dd>
               </dl>
               <dl class="palette palette-belize-hole">
                 <dt>#2980b9</dt>
@@ -356,8 +356,8 @@
           <div class="row mbl">
             <div class="span2">
               <dl class="palette palette-sun-flower">
-                <dt>#f1c40f</dt>
-                <dd>Sun flower</dd>
+                <dt>#F7B42C</dt>
+                <dd>Yellow</dd>
               </dl>
               <dl class="palette palette-orange">
                 <dt>#f39c12</dt>
@@ -400,8 +400,8 @@
 
             <div class="span2">
               <dl class="palette palette-concrete">
-                <dt>#95a5a6</dt>
-                <dd>Concrete</dd>
+                <dt>#99AABB</dt>
+                <dd>GRAY</dd>
               </dl>
               <dl class="palette palette-asbestos">
                 <dt>#7f8c8d</dt>
